@@ -87,17 +87,7 @@ public class Application {
         for (int i = 0; i < 4; i++) {
             //bigliettoDao.save(bigliettoSupplier.get());
         }
-       /* List<Biglietto> biglietti = bigliettoDao.findAll();
-        GiroTratta trattaAnalizzata = giroTrattaDao.getById(UUID.fromString("32ebdea8-028c-49f0-af6d-44085f764730"));
-        //**************VIDIMAZIONE DI BIGLIETTO
-        Supplier<Vidimato> validazioneDiUnBigliettoRandomSupplier = () -> {
-            Biglietto biglietto = biglietti.get(random.nextInt(biglietti.size()));
-            LocalDate dataVidimazione = LocalDate.now();
-            return new Vidimato(biglietto, trattaAnalizzata, dataVidimazione);
-        };
-        for (int i = 0; i < 2; i++) {
-            vidimatoDao.save(validazioneDiUnBigliettoRandomSupplier.get());
-        }*/
+        List<Biglietto> biglietti = bigliettoDao.findAll();
 
         //**************************   CREAZIONE GIROTRATTE  *********************************
         Supplier<GiroTratta> giroTrattaSupplier = new GiroTrattaSupplier(mezzi, tratte);
@@ -105,11 +95,6 @@ public class Application {
             //giroTrattaDao.save(giroTrattaSupplier.get());
         }
         List<GiroTratta> girotratte = giroTrattaDao.findAll();
-
-
-        /*Tratta trattaAnalizzata = trattaDao.getById(UUID.fromString("7aa0af42-9fa6-420d-9a53-a7fdeac6fb91"));
-        System.out.println("Tempo medio effettivo in minuti: " + amministratoreDao.calcolaTempoMedioEffettivo(trattaAnalizzata));*/
-
         startMenu();
         em.close();
         emf.close();
@@ -119,36 +104,43 @@ public class Application {
     public static void startMenu() {
         menuAtac:
         while (true) {
-            System.out.println("Benvenuto in Atac");
-            System.out.println("Premi uno dei seguenti pulsanti per scegliere un operazione:");
-            System.out.println("1- Registrati");
-            System.out.println("2- Login");
-            System.out.println("3- Esci");
+            try {
+                System.out.println("Benvenuto in Atac");
+                System.out.println("Premi uno dei seguenti pulsanti per scegliere un operazione:");
+                System.out.println("1- Registrati");
+                System.out.println("2- Login");
+                System.out.println("3- Esci");
 
-            int scelta = gestioneInputIntMenu(1, 3);
-
-            switch (scelta) {
-                case 1:
-                    /*aggiungere metodo per la gestione del registrati*/
-                    registrazione();
-                    break;
-                case 2:
-                    /*add metodo per gestire il login*/
-                    login();
-                    //menuUtente(); /*da togliere una volta finito il metodo login, per ora questa è solo un modo per continuare la struttura del menu*/
-                    break;
-                case 3:
-                    /*si esce dal while principale*/
-                    break menuAtac;
-                default:
-                    System.out.println("Scelta non valida");
-                    startMenu();
-                    break;
+                int scelta = gestioneInputIntMenu(1, 3);
+                if (scelta < 1 || scelta > 3) {
+                    System.out.println("Il numero inserito non è valido");
+                    return;
+                }
+                switch (scelta) {
+                    case 1:
+                        /*aggiungere metodo per la gestione del registrati*/
+                        registrazione();
+                        break;
+                    case 2:
+                        /*add metodo per gestire il login*/
+                        login();
+                        //menuUtente(); /*da togliere una volta finito il metodo login, per ora questa è solo un modo per continuare la struttura del menu*/
+                        break;
+                    case 3:
+                        /*si esce dal while principale*/
+                        break menuAtac;
+                    default:
+                        System.out.println("Scelta non valida");
+                        startMenu();
+                        break;
+                }
+            } catch (Exception e) {
+                System.out.println(e.getMessage());
             }
         }
     }
 
-    private static int gestioneInputIntMenu(int min, int max) {
+    public static int gestioneInputIntMenu(int min, int max) {
         while (true) {
             try {
                 int input = scanner.nextInt();
@@ -168,16 +160,23 @@ public class Application {
     private static void login() {
         System.out.println("inserisci il tuo codice UUID");
         String input = scanner.nextLine();
-        /*devo capire se è un utente o un admin */  /*gianluca*/
-        /*fatto questo nel if else if che creeremo dobbiamo implementare i metodi che continueranno il menu*/
-        findUserOrAdminById2(UUID.fromString(input));
-
+        try {
+            UUID uuid = UUID.fromString(input);
+            findUserOrAdminById2(uuid);
+        } catch (Exception e) {
+            System.out.println("id non valido, reinserisci un id valido");
+            login();
+        }
     }
 
     public static void findUserOrAdminById2(UUID personaId) {
         Utente foundUser = em.find(Utente.class, personaId);
         if (foundUser == null) {
             Amministratore foundAdmin = em.find(Amministratore.class, personaId);
+            if (foundAdmin == null) {
+                System.out.println("Utente o Amministratore non trovato, controlla l' ID");
+                return;
+            }
             System.out.println("Benvenuto/a " + foundAdmin.getNome() + " Accesso effettuato come amministratore!");
             /*metodo per avanzare nel menu amministratore*/
             /*aggiungere un if per vedere se admni == null*/
@@ -202,36 +201,39 @@ public class Application {
         }
         cicloMenuUtente:
         while (true) {
-            System.out.println("Premi uno dei seguenti pulsanti per scegliere un operazione da effettuare:");
-            System.out.println("1- Validazione corsa");
-            System.out.println("2- Acquista biglietto");
-            System.out.println("3- Abbonamenti");
-            System.out.println("4- Contattaci");
-            System.out.println("5- Torna indietro");
-            int scelta = gestioneInputIntMenu(1, 4);
-            switch (scelta) {
-                case 1:
-                    /*metodo per vidimare il biglietto*/ /*gianluca*/
-                    vidmazioneBiglietto(tessera.getUtente());
-                    break;
-                case 2:
-                    bigliettoDao.acquistaBiglietto(tessera);
-                    break;
-                case 3:
-                    /*metodo abbonamento*/
-                    menuAbbonamento(tessera.getUtente());
-                    break;
-                case 4:
-                    /*messaggio che compare in contattaci*/
-                    System.out.println("Hai un problema che questo menu non riesce a soddisfare, contattaci al numero +00-111-222-3333");
-                    break;
-                case 5:
-                    break cicloMenuUtente;
-                default:
-                    System.out.println("Scelta non valida");
-                    break;
+            try {
+                System.out.println("Premi uno dei seguenti pulsanti per scegliere un operazione da effettuare:");
+                System.out.println("1- Validazione corsa");
+                System.out.println("2- Acquista biglietto");
+                System.out.println("3- Abbonamenti");
+                System.out.println("4- Contattaci");
+                System.out.println("5- Torna indietro");
+                int scelta = gestioneInputIntMenu(1, 4);
+                switch (scelta) {
+                    case 1:
+                        //iserisciBiglietto
+                        vidmazioneBiglietto(tessera);
+                        break;
+                    case 2:
+                        bigliettoDao.acquistaBiglietto(tessera);
+                        break;
+                    case 3:
+                        /*metodo abbonamento*/
+                        menuAbbonamento(tessera.getUtente());
+                        break;
+                    case 4:
+                        /*messaggio che compare in contattaci*/
+                        System.out.println("Hai un problema che questo menu non riesce a soddisfare, contattaci al numero +00-111-222-3333");
+                        break;
+                    case 5:
+                        break cicloMenuUtente;
+                    default:
+                        System.out.println("Scelta non valida");
+                        break;
+                }
+            } catch (Exception e) {
+                System.out.println(e.getMessage());
             }
-
         }
     }
 
@@ -255,19 +257,10 @@ public class Application {
 
     public static void controllaValiditaAbbonamento(Utente utente) {
 
-        /* 1 mi recupero tessera tramite tesseradao */
-
-        /*2 controllo se la tessera ha gia abbonamenti caricati
-         * 2.1 e se il piu recente è ancora valido
-         *
-         * 3 mi trovo l'abb piu recente
-         *
-         * 4 verifico la data discadenza*/
         System.out.println("Inserisci l'UUID della tua tessera:");
         String uuidInput = scanner.nextLine();
         UUID tesseraId = UUID.fromString(uuidInput);
 
-        /*1*/
         Tessera tessera;
         try {
             tessera = td.getById(tesseraId);
@@ -275,25 +268,18 @@ public class Application {
             System.out.println("Tessera non trovata.");
             return;
         }
-        /*2*/
-
         List<Abbonamento> abbonamenti = tessera.getAbbonamenti();
         if (abbonamenti == null || abbonamenti.isEmpty()) {
             System.out.println("Non ci sono abbonamenti associati a questa tessera.");
             return;
         }
-
-        /*3*/
         Abbonamento abbonamentoRecente = abbonamenti.stream()
                 .max(Comparator.comparing(Abbonamento::getData_validazione))/*.max((a1, a2) -> a1.getData_validazione().compareTo(a2.getData_validazione()))*/
                 .orElse(null);
-
         if (abbonamentoRecente == null) {
             System.out.println("Nessun abbonamento valido trovato.");
             return;
         }
-
-        /*4*/
         LocalDate dataScadenza = abbonamentoRecente.getData_scadenza();
         if (dataScadenza != null && !dataScadenza.isBefore(LocalDate.now())) {
             System.out.println("Il tuo abbonamento è ancora valido fino il: " + dataScadenza);
@@ -321,11 +307,26 @@ public class Application {
         td.save(nuovaTessera);
 
         menuUtente(nuovaTessera);
-
-
     }
 
-    public static void vidmazioneBiglietto(Utente utente) {
+    public static void vidmazioneBiglietto(Tessera tessera) {
+
+        List<Biglietto> biglietti = tessera.getBiglietti();
+        if (biglietti.isEmpty()) {
+            System.out.println("Non hai biglietti disponibili");
+            return;
+        }
+
+        System.out.println("Scegli il biglietto da vidimare");
+        for (int i = 0; i < biglietti.size(); i++) {
+            Biglietto biglietto = biglietti.get(i);
+            System.out.println(i + 1 + ". " + biglietto.getId());
+        }
+        int scelta = Integer.parseInt(scanner.nextLine());
+
+        Biglietto biglietto = biglietti.get(scelta - 1);
+
+
         System.out.println("Scegli la tratta che desideri percorrere:");
         //lista di tutte le tratte del DB
         List<Tratta> listaTratte = trattaDao.findAll();
@@ -344,8 +345,16 @@ public class Application {
         System.out.println("Tempo di arrivo: " + giroTrattaDellaTrattaSelezionata.getFirst().getTempo_arrivo());
         System.out.println("Mezzo : " + giroTrattaDellaTrattaSelezionata.getFirst().getMezzo_id().getTipo_mezzo());
 
-        Vidimato vidimazione = new Vidimato(utente.getTessera().getBiglietti().getFirst(), giroTrattaDellaTrattaSelezionata.getFirst(), LocalDate.now());
-        vidimatoDao.save(vidimazione);
+        /*System.out.println(tessera);
+        Tessera tesseraFromDb = td.getById(tessera.getId());
+
+        Biglietto bigliettoFromDb = tesseraFromDb.getBiglietti().get(0);*/
+        try {
+            Vidimato vidimazione = new Vidimato(biglietto, giroTrattaDellaTrattaSelezionata.getFirst(), LocalDate.now());
+            vidimatoDao.save(vidimazione);
+        } catch (Exception e) {
+            System.out.println(e.getMessage());
+        }
     }
 }
 
